--- a/app/src/main/res/layout/fragment_coming_soon.xml
+++ b/app/src/main/res/layout/fragment_coming_soon.xml
@@ -3,10 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentComingSoon">
+    tools:context=".FragmentComingSoon"
+    android:background="@color/black">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
 </FrameLayout>
