--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/home_list"
+        android:background="@color/black"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
