--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,10 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentProfile">
+    tools:context=".FragmentProfile"
+    android:background="@color/black">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
 </FrameLayout>
