--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,4 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@id/fragmentHome"
+        android:title="Home"
+        android:icon="@drawable/ic_home"/>
+    <item
+        android:id="@id/fragmentComingSoon"
+        android:title="Coming Soon"
+        android:icon="@drawable/ic_coming_soon"/>
+    <item
+        android:id="@id/fragmentFavorite"
+        android:title="Favorite"
+        android:icon="@drawable/ic_favorite"/>
+    <item
+        android:id="@id/fragmentProfile"
+        android:title="Profile"
+        android:icon="@drawable/ic_profile"/>
+
 </menu>
