--- a/app/src/main/res/layout/movie.xml
+++ b/app/src/main/res/layout/movie.xml
@@ -22,11 +22,12 @@
 
         <ImageView
             android:id="@+id/movie_image"
-            android:layout_width="120dp"
-            android:layout_height="150dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:scaleType="fitXY"
             app:image="@{movie}"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="1:1.25"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -49,14 +50,24 @@
 
         <ImageView
             android:id="@+id/movie_like"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
             app:isLiked="@{movie.isLiked()}"
             app:layout_constraintBottom_toBottomOf="@+id/movie_image"
+            app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="@+id/movie_image"
+            app:layout_constraintStart_toEndOf="@id/left"
             app:srcCompat="@drawable/ic_favorite" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/left"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.8" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
