--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#000</color>
 <!--    <color name="purple_700">#FF3700B3</color>-->
-    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_200">#FF0026</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#1E1E1E</color>
     <color name="white">#FFFFFFFF</color>
