--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,63 +1,190 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".FragmentProfile"
-    android:background="@color/black">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
-        android:gravity="center"
-        android:orientation="vertical"
-        android:layout_gravity="center"
+    <data>
+        <import type="com.example.hw12.model.User"/>
+        <variable
+            name="user"
+            type="User"/>
+    </data>
+
+    <ScrollView
+        android:background="#000000"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:id="@+id/profile_image"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_marginBottom="20dp"
-            android:background="#4C4B4B"/>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="file name">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/profile_username"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-        </com.google.android.material.textfield.TextInputLayout>
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
         <LinearLayout
-            android:layout_marginTop="20dp"
-            android:gravity="center"
+            android:id="@+id/profile_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            android:orientation="vertical">
 
-            <Button
-                android:id="@+id/profile_post"
-                android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#B61818"
-                android:layout_marginEnd="10dp"
-                android:text="Post"/>
+                android:text="Sign Up"
+                android:textStyle="bold"
+                android:textSize="30sp"
+                android:gravity="start"
+                android:layout_marginBottom="15dp"
+                android:textColor="@color/white" />
 
-            <Button
-                android:id="@+id/profile_get"
-                android:layout_width="wrap_content"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/profile_image_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/profile_image"
+                    android:background="@color/my_white"
+                    app:image='@{user.image}'
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:layout_gravity="center"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/ic_profile" />
+
+                <ImageView
+                    android:id="@+id/profile_image_edit"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:src="@drawable/ic_edit"
+                    app:layout_constraintEnd_toEndOf="@+id/profile_image"
+                    app:layout_constraintTop_toTopOf="@+id/profile_image" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/profile_name_layout"
+                style="@style/myTextInputLayout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#B61818"
-                android:layout_marginStart="10dp"
-                android:text="Get"/>
+                app:startIconDrawable="@drawable/ic_profile"
+                android:hint="Name">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    style="@style/myTextInputEditText"
+                    android:id="@+id/profile_name"
+                    android:inputType="textPersonName"
+                    android:text='@{user.name}'
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/profile_family_layout"
+                style="@style/myTextInputLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:startIconDrawable="@drawable/ic_profile"
+                android:hint="Family">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    style="@style/myTextInputEditText"
+                    android:id="@+id/profile_family"
+                    android:text='@{user.family}'
+                    android:inputType="textPersonName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/profile_email_layout"
+                style="@style/myTextInputLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:startIconDrawable="@drawable/ic_email"
+                app:suffixText="\@gmail.com"
+                android:hint="Email">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    style="@style/myTextInputEditText"
+                    android:id="@+id/profile_email"
+                    android:text='@{user.email}'
+                    android:inputType="textEmailAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/myTextInputLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:startIconDrawable="@drawable/ic_user"
+                android:hint="UserName">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    style="@style/myTextInputEditText"
+                    android:id="@+id/profile_username"
+                    android:text='@{user.userName}'
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/myTextInputLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:startIconDrawable="@drawable/ic_phone"
+                android:hint="Phone Number">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    style="@style/myTextInputEditText"
+                    android:id="@+id/profile_phone"
+                    android:text='@{user.phone}'
+                    android:inputType="phone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/profile_birthday_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/myTextInputLayout"
+                app:endIconMode="custom"
+                android:hint="Birthday"
+                app:endIconDrawable="@drawable/ic_calendar"
+                app:startIconDrawable="@drawable/ic_cake">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    style="@style/myTextInputEditText"
+                    android:id="@+id/profile_birthday"
+                    android:text='@{user.birthday}'
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="date" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/profile_register"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Register"
+                android:layout_marginTop="50sp"
+                style="@style/myButton"/>
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/profile_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Login"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="20sp"
+                style="@style/myButton"/>
 
         </LinearLayout>
 
-    </LinearLayout>
-
-</FrameLayout>
+    </ScrollView>
+</layout>
