--- a/app/src/main/res/layout/movie.xml
+++ b/app/src/main/res/layout/movie.xml
@@ -4,20 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <import type="com.example.hw12.viewmodel.NetflixViewModel"/>
-        <import type="com.example.hw12.model.Movie"/>
+        <import type="com.example.hw12.ui.NetflixViewModel"/>
+        <import type="com.example.hw12.model.imdb.IMDBItemUiState"/>
         <import type="androidx.lifecycle.LiveData"/>
         <variable
-            name="movie"
-            type="com.example.hw12.model.Movie" />
+            name="item"
+            type="IMDBItemUiState" />
         <variable
             name="model"
-            type="com.example.hw12.viewmodel.NetflixViewModel" />
+            type="com.example.hw12.ui.NetflixViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/movie_root"
         android:padding="10dp">
 
         <ImageView
@@ -25,7 +26,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:scaleType="fitXY"
-            app:image="@{movie}"
+            app:loadImage="@{item.image}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1.25"
             app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:gravity="center"
-            android:text='@{movie.name, default="name"}'
+            android:text='@{item.title, default="name"}'
             android:textColor="@color/white"
             android:textSize="18dp"
 
@@ -54,7 +55,8 @@
             android:layout_height="0dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
-            app:isLiked="@{movie.isLiked()}"
+            app:isLiked="@{item.isLiked()}"
+            app:isVisible="@{item.isLiked != null}"
             app:layout_constraintBottom_toBottomOf="@+id/movie_image"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="@+id/movie_image"
