--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,197 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <data>
-        <import type="android.view.View"/>
-        <import type="com.example.hw12.model.user.User"/>
-        <import type="androidx.lifecycle.LiveData"/>
-        <import type="android.graphics.Bitmap"/>
-
-        <variable
-            name="bitmap"
-            type="LiveData&lt;Bitmap>" />
-    </data>
-
-    <ScrollView
-        android:background="#000000"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
-
-        <LinearLayout
-            android:id="@+id/profile_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Sign Up"
-                android:textStyle="bold"
-                android:textSize="30sp"
-                android:gravity="start"
-                android:layout_marginBottom="15dp"
-                android:textColor="@color/white" />
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/profile_image_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <com.google.android.material.imageview.ShapeableImageView
-                    android:id="@+id/profile_image"
-                    android:background="@color/my_white"
-                    app:image='@{bitmap}'
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
-                    android:layout_gravity="center"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_profile" />
-
-                <ImageView
-                    android:id="@+id/profile_image_edit"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:src="@drawable/ic_edit"
-                    app:layout_constraintEnd_toEndOf="@+id/profile_image"
-                    app:layout_constraintTop_toTopOf="@+id/profile_image" />
-
-                <ImageView
-                    android:id="@+id/profile_image_remove"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:visibility="@{bitmap != null ? View.VISIBLE : View.GONE, default=gone}"
-                    android:src="@drawable/ic_delete"
-                    app:layout_constraintStart_toStartOf="@+id/profile_image"
-                    app:layout_constraintTop_toTopOf="@+id/profile_image" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/profile_name_layout"
-                style="@style/myTextInputLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:startIconDrawable="@drawable/ic_profile"
-                android:hint="Name">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    style="@style/myTextInputEditText"
-                    android:id="@+id/profile_name"
-                    android:inputType="textPersonName"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/profile_family_layout"
-                style="@style/myTextInputLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:startIconDrawable="@drawable/ic_profile"
-                android:hint="Family">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    style="@style/myTextInputEditText"
-                    android:id="@+id/profile_family"
-                    android:inputType="textPersonName"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/profile_email_layout"
-                style="@style/myTextInputLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:startIconDrawable="@drawable/ic_email"
-                app:suffixText="\@gmail.com"
-                android:hint="Email">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    style="@style/myTextInputEditText"
-                    android:id="@+id/profile_email"
-                    android:inputType="textEmailAddress"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/myTextInputLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:startIconDrawable="@drawable/ic_user"
-                android:hint="UserName">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    style="@style/myTextInputEditText"
-                    android:id="@+id/profile_username"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/myTextInputLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:startIconDrawable="@drawable/ic_phone"
-                android:hint="Phone Number">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    style="@style/myTextInputEditText"
-                    android:id="@+id/profile_phone"
-                    android:inputType="phone"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/profile_birthday_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/myTextInputLayout"
-                app:endIconMode="custom"
-                android:hint="Birthday"
-                app:endIconDrawable="@drawable/ic_calendar"
-                app:startIconDrawable="@drawable/ic_cake">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    style="@style/myTextInputEditText"
-                    android:id="@+id/profile_birthday"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="date" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/profile_register"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Register"
-                android:layout_marginTop="50sp"
-                style="@style/myButton"/>
-
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/profile_login"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Login"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="20sp"
-                style="@style/myButton"/>
-
-        </LinearLayout>
-
-    </ScrollView>
-</layout>
+</LinearLayout>
