--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -14,7 +14,7 @@
         android:title="Favorite"
         android:icon="@drawable/ic_favorite"/>
     <item
-        android:id="@id/fragmentProfile"
+        android:id="@id/fragmentSignIn"
         android:title="Profile"
         android:icon="@drawable/ic_profile"/>
 
