complete for hw 15

--- a/app/src/main/res/layout/movie.xml
+++ b/app/src/main/res/layout/movie.xml
@@ -15,7 +15,7 @@
             type="com.example.hw12.ui.NetflixViewModel" />
         <variable
             name="hasSelection"
-            type="LiveData&lt;Boolean>" />
+            type="Boolean" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
